parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT
    POWER

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM LBRACE list_decl list_sent RBRACE
Rule 2     list_decl -> list_decl decl
Rule 3     list_decl -> decl
Rule 4     list_decl -> empty
Rule 5     decl -> tipo list_id SEMICOLON
Rule 6     tipo -> INT
Rule 7     tipo -> FLOAT
Rule 8     tipo -> BOOL
Rule 9     list_id -> IDENTIFIER COMMA list_id
Rule 10    list_id -> IDENTIFIER
Rule 11    list_sent -> sent list_sent
Rule 12    list_sent -> sent
Rule 13    list_sent -> empty
Rule 14    sent -> sent_if
Rule 15    sent -> sent_while
Rule 16    sent -> sent_do
Rule 17    sent -> sent_read
Rule 18    sent -> sent_write
Rule 19    sent -> bloque
Rule 20    sent -> sent_assign
Rule 21    sent -> BREAK
Rule 22    sent_if -> IF LPAREN exp_bool RPAREN THEN bloque else_part FI
Rule 23    else_part -> ELSE bloque
Rule 24    else_part -> empty
Rule 25    sent_while -> WHILE LPAREN exp_bool RPAREN bloque
Rule 26    sent_do -> DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
Rule 27    sent_read -> READ IDENTIFIER SEMICOLON
Rule 28    sent_write -> WRITE exp_bool_or_value SEMICOLON
Rule 29    exp_value -> NUMBER
Rule 30    exp_value -> IDENTIFIER
Rule 31    bloque -> LBRACE list_sent RBRACE
Rule 32    sent_assign -> IDENTIFIER ASSIGN expr SEMICOLON
Rule 33    sent_assign -> IDENTIFIER ASSIGN exp_bool SEMICOLON
Rule 34    sent_assign -> IDENTIFIER ASSIGN factor SEMICOLON
Rule 35    exp_bool -> exp_bool OR comb
Rule 36    exp_bool -> exp_bool OR expr
Rule 37    exp_bool -> comb
Rule 38    exp_bool_or_value -> exp_bool
Rule 39    exp_bool_or_value -> exp_value
Rule 40    comb -> comb AND igualdad
Rule 41    comb -> comb AND expr
Rule 42    comb -> igualdad
Rule 43    igualdad -> igualdad EQ rel
Rule 44    igualdad -> igualdad NE rel
Rule 45    igualdad -> rel
Rule 46    rel -> expr op_rel expr
Rule 47    op_rel -> LT
Rule 48    op_rel -> LE
Rule 49    op_rel -> GT
Rule 50    op_rel -> GE
Rule 51    op_rel -> EQ
Rule 52    op_rel -> NE
Rule 53    expr -> expr PLUS term
Rule 54    expr -> expr MINUS term
Rule 55    expr -> term
Rule 56    term -> term TIMES unario
Rule 57    term -> term DIVIDE unario
Rule 58    term -> unario
Rule 59    unario -> PLUS unario
Rule 60    unario -> MINUS unario
Rule 61    unario -> factor
Rule 62    factor -> NUMBER
Rule 63    factor -> IDENTIFIER
Rule 64    factor -> TRUE
Rule 65    factor -> FALSE
Rule 66    factor -> LPAREN expr RPAREN
Rule 67    factor -> LPAREN exp_bool RPAREN
Rule 68    empty -> <empty>

Terminals, with rules where they appear

AND                  : 40 41
ASSIGN               : 32 33 34
BOOL                 : 8
BREAK                : 21
COMMA                : 9
DIVIDE               : 57
DO                   : 26
ELSE                 : 23
EQ                   : 43 51
FALSE                : 65
FI                   : 22
FLOAT                : 7
GE                   : 50
GT                   : 49
IDENTIFIER           : 9 10 27 30 32 33 34 63
IF                   : 22
INT                  : 6
LBRACE               : 1 31
LE                   : 48
LPAREN               : 22 25 26 66 67
LT                   : 47
MINUS                : 54 60
NE                   : 44 52
NOT                  : 
NUMBER               : 29 62
OR                   : 35 36
PLUS                 : 53 59
POWER                : 
PROGRAM              : 1
RBRACE               : 1 31
READ                 : 27
RPAREN               : 22 25 26 66 67
SEMICOLON            : 5 26 27 28 32 33 34
THEN                 : 22
TIMES                : 56
TRUE                 : 64
UNTIL                : 26
WHILE                : 25
WRITE                : 28
error                : 

Nonterminals, with rules where they appear

bloque               : 19 22 23 25 26
comb                 : 35 37 40 41
decl                 : 2 3
else_part            : 22
empty                : 4 13 24
exp_bool             : 22 25 26 33 35 36 38 67
exp_bool_or_value    : 28
exp_value            : 39
expr                 : 32 36 41 46 46 53 54 66
factor               : 34 61
igualdad             : 40 42 43 44
list_decl            : 1 2
list_id              : 5 9
list_sent            : 1 11 31
op_rel               : 46
program              : 0
rel                  : 43 44 45
sent                 : 11 12
sent_assign          : 20
sent_do              : 16
sent_if              : 14
sent_read            : 17
sent_while           : 15
sent_write           : 18
term                 : 53 54 55 56 57
tipo                 : 5
unario               : 56 57 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM LBRACE list_decl list_sent RBRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . LBRACE list_decl list_sent RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) program -> PROGRAM LBRACE . list_decl list_sent RBRACE
    (2) list_decl -> . list_decl decl
    (3) list_decl -> . decl
    (4) list_decl -> . empty
    (5) decl -> . tipo list_id SEMICOLON
    (68) empty -> .
    (6) tipo -> . INT
    (7) tipo -> . FLOAT
    (8) tipo -> . BOOL

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    BREAK           reduce using rule 68 (empty -> .)
    IF              reduce using rule 68 (empty -> .)
    WHILE           reduce using rule 68 (empty -> .)
    DO              reduce using rule 68 (empty -> .)
    READ            reduce using rule 68 (empty -> .)
    WRITE           reduce using rule 68 (empty -> .)
    LBRACE          reduce using rule 68 (empty -> .)
    IDENTIFIER      reduce using rule 68 (empty -> .)
    RBRACE          reduce using rule 68 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10

  ! INT             [ reduce using rule 68 (empty -> .) ]
  ! FLOAT           [ reduce using rule 68 (empty -> .) ]
  ! BOOL            [ reduce using rule 68 (empty -> .) ]

    list_decl                      shift and go to state 4
    decl                           shift and go to state 5
    empty                          shift and go to state 6
    tipo                           shift and go to state 7

state 4

    (1) program -> PROGRAM LBRACE list_decl . list_sent RBRACE
    (2) list_decl -> list_decl . decl
    (11) list_sent -> . sent list_sent
    (12) list_sent -> . sent
    (13) list_sent -> . empty
    (5) decl -> . tipo list_id SEMICOLON
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK
    (68) empty -> .
    (6) tipo -> . INT
    (7) tipo -> . FLOAT
    (8) tipo -> . BOOL
    (22) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque else_part FI
    (25) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (26) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (27) sent_read -> . READ IDENTIFIER SEMICOLON
    (28) sent_write -> . WRITE exp_bool_or_value SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE
    (32) sent_assign -> . IDENTIFIER ASSIGN expr SEMICOLON
    (33) sent_assign -> . IDENTIFIER ASSIGN exp_bool SEMICOLON
    (34) sent_assign -> . IDENTIFIER ASSIGN factor SEMICOLON

    BREAK           shift and go to state 23
    RBRACE          reduce using rule 68 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 28

    list_sent                      shift and go to state 12
    decl                           shift and go to state 13
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    tipo                           shift and go to state 7
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 5

    (3) list_decl -> decl .

    BREAK           reduce using rule 3 (list_decl -> decl .)
    INT             reduce using rule 3 (list_decl -> decl .)
    FLOAT           reduce using rule 3 (list_decl -> decl .)
    BOOL            reduce using rule 3 (list_decl -> decl .)
    IF              reduce using rule 3 (list_decl -> decl .)
    WHILE           reduce using rule 3 (list_decl -> decl .)
    DO              reduce using rule 3 (list_decl -> decl .)
    READ            reduce using rule 3 (list_decl -> decl .)
    WRITE           reduce using rule 3 (list_decl -> decl .)
    LBRACE          reduce using rule 3 (list_decl -> decl .)
    IDENTIFIER      reduce using rule 3 (list_decl -> decl .)
    RBRACE          reduce using rule 3 (list_decl -> decl .)


state 6

    (4) list_decl -> empty .

    BREAK           reduce using rule 4 (list_decl -> empty .)
    INT             reduce using rule 4 (list_decl -> empty .)
    FLOAT           reduce using rule 4 (list_decl -> empty .)
    BOOL            reduce using rule 4 (list_decl -> empty .)
    IF              reduce using rule 4 (list_decl -> empty .)
    WHILE           reduce using rule 4 (list_decl -> empty .)
    DO              reduce using rule 4 (list_decl -> empty .)
    READ            reduce using rule 4 (list_decl -> empty .)
    WRITE           reduce using rule 4 (list_decl -> empty .)
    LBRACE          reduce using rule 4 (list_decl -> empty .)
    IDENTIFIER      reduce using rule 4 (list_decl -> empty .)
    RBRACE          reduce using rule 4 (list_decl -> empty .)


state 7

    (5) decl -> tipo . list_id SEMICOLON
    (9) list_id -> . IDENTIFIER COMMA list_id
    (10) list_id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 31

    list_id                        shift and go to state 30

state 8

    (6) tipo -> INT .

    IDENTIFIER      reduce using rule 6 (tipo -> INT .)


state 9

    (7) tipo -> FLOAT .

    IDENTIFIER      reduce using rule 7 (tipo -> FLOAT .)


state 10

    (8) tipo -> BOOL .

    IDENTIFIER      reduce using rule 8 (tipo -> BOOL .)


state 11

    (31) bloque -> LBRACE . list_sent RBRACE
    (11) list_sent -> . sent list_sent
    (12) list_sent -> . sent
    (13) list_sent -> . empty
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK
    (68) empty -> .
    (22) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque else_part FI
    (25) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (26) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (27) sent_read -> . READ IDENTIFIER SEMICOLON
    (28) sent_write -> . WRITE exp_bool_or_value SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE
    (32) sent_assign -> . IDENTIFIER ASSIGN expr SEMICOLON
    (33) sent_assign -> . IDENTIFIER ASSIGN exp_bool SEMICOLON
    (34) sent_assign -> . IDENTIFIER ASSIGN factor SEMICOLON

    BREAK           shift and go to state 23
    RBRACE          reduce using rule 68 (empty -> .)
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 28

    list_sent                      shift and go to state 32
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 12

    (1) program -> PROGRAM LBRACE list_decl list_sent . RBRACE

    RBRACE          shift and go to state 33


state 13

    (2) list_decl -> list_decl decl .

    BREAK           reduce using rule 2 (list_decl -> list_decl decl .)
    INT             reduce using rule 2 (list_decl -> list_decl decl .)
    FLOAT           reduce using rule 2 (list_decl -> list_decl decl .)
    BOOL            reduce using rule 2 (list_decl -> list_decl decl .)
    IF              reduce using rule 2 (list_decl -> list_decl decl .)
    WHILE           reduce using rule 2 (list_decl -> list_decl decl .)
    DO              reduce using rule 2 (list_decl -> list_decl decl .)
    READ            reduce using rule 2 (list_decl -> list_decl decl .)
    WRITE           reduce using rule 2 (list_decl -> list_decl decl .)
    LBRACE          reduce using rule 2 (list_decl -> list_decl decl .)
    IDENTIFIER      reduce using rule 2 (list_decl -> list_decl decl .)
    RBRACE          reduce using rule 2 (list_decl -> list_decl decl .)


state 14

    (11) list_sent -> sent . list_sent
    (12) list_sent -> sent .
    (11) list_sent -> . sent list_sent
    (12) list_sent -> . sent
    (13) list_sent -> . empty
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . BREAK
    (68) empty -> .
    (22) sent_if -> . IF LPAREN exp_bool RPAREN THEN bloque else_part FI
    (25) sent_while -> . WHILE LPAREN exp_bool RPAREN bloque
    (26) sent_do -> . DO bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (27) sent_read -> . READ IDENTIFIER SEMICOLON
    (28) sent_write -> . WRITE exp_bool_or_value SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE
    (32) sent_assign -> . IDENTIFIER ASSIGN expr SEMICOLON
    (33) sent_assign -> . IDENTIFIER ASSIGN exp_bool SEMICOLON
    (34) sent_assign -> . IDENTIFIER ASSIGN factor SEMICOLON

  ! reduce/reduce conflict for RBRACE resolved using rule 12 (list_sent -> sent .)
    RBRACE          reduce using rule 12 (list_sent -> sent .)
    BREAK           shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 29
    LBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 28

  ! RBRACE          [ reduce using rule 68 (empty -> .) ]

    sent                           shift and go to state 14
    list_sent                      shift and go to state 34
    empty                          shift and go to state 15
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22

state 15

    (13) list_sent -> empty .

    RBRACE          reduce using rule 13 (list_sent -> empty .)


state 16

    (14) sent -> sent_if .

    BREAK           reduce using rule 14 (sent -> sent_if .)
    IF              reduce using rule 14 (sent -> sent_if .)
    WHILE           reduce using rule 14 (sent -> sent_if .)
    DO              reduce using rule 14 (sent -> sent_if .)
    READ            reduce using rule 14 (sent -> sent_if .)
    WRITE           reduce using rule 14 (sent -> sent_if .)
    LBRACE          reduce using rule 14 (sent -> sent_if .)
    IDENTIFIER      reduce using rule 14 (sent -> sent_if .)
    RBRACE          reduce using rule 14 (sent -> sent_if .)


state 17

    (15) sent -> sent_while .

    BREAK           reduce using rule 15 (sent -> sent_while .)
    IF              reduce using rule 15 (sent -> sent_while .)
    WHILE           reduce using rule 15 (sent -> sent_while .)
    DO              reduce using rule 15 (sent -> sent_while .)
    READ            reduce using rule 15 (sent -> sent_while .)
    WRITE           reduce using rule 15 (sent -> sent_while .)
    LBRACE          reduce using rule 15 (sent -> sent_while .)
    IDENTIFIER      reduce using rule 15 (sent -> sent_while .)
    RBRACE          reduce using rule 15 (sent -> sent_while .)


state 18

    (16) sent -> sent_do .

    BREAK           reduce using rule 16 (sent -> sent_do .)
    IF              reduce using rule 16 (sent -> sent_do .)
    WHILE           reduce using rule 16 (sent -> sent_do .)
    DO              reduce using rule 16 (sent -> sent_do .)
    READ            reduce using rule 16 (sent -> sent_do .)
    WRITE           reduce using rule 16 (sent -> sent_do .)
    LBRACE          reduce using rule 16 (sent -> sent_do .)
    IDENTIFIER      reduce using rule 16 (sent -> sent_do .)
    RBRACE          reduce using rule 16 (sent -> sent_do .)


state 19

    (17) sent -> sent_read .

    BREAK           reduce using rule 17 (sent -> sent_read .)
    IF              reduce using rule 17 (sent -> sent_read .)
    WHILE           reduce using rule 17 (sent -> sent_read .)
    DO              reduce using rule 17 (sent -> sent_read .)
    READ            reduce using rule 17 (sent -> sent_read .)
    WRITE           reduce using rule 17 (sent -> sent_read .)
    LBRACE          reduce using rule 17 (sent -> sent_read .)
    IDENTIFIER      reduce using rule 17 (sent -> sent_read .)
    RBRACE          reduce using rule 17 (sent -> sent_read .)


state 20

    (18) sent -> sent_write .

    BREAK           reduce using rule 18 (sent -> sent_write .)
    IF              reduce using rule 18 (sent -> sent_write .)
    WHILE           reduce using rule 18 (sent -> sent_write .)
    DO              reduce using rule 18 (sent -> sent_write .)
    READ            reduce using rule 18 (sent -> sent_write .)
    WRITE           reduce using rule 18 (sent -> sent_write .)
    LBRACE          reduce using rule 18 (sent -> sent_write .)
    IDENTIFIER      reduce using rule 18 (sent -> sent_write .)
    RBRACE          reduce using rule 18 (sent -> sent_write .)


state 21

    (19) sent -> bloque .

    BREAK           reduce using rule 19 (sent -> bloque .)
    IF              reduce using rule 19 (sent -> bloque .)
    WHILE           reduce using rule 19 (sent -> bloque .)
    DO              reduce using rule 19 (sent -> bloque .)
    READ            reduce using rule 19 (sent -> bloque .)
    WRITE           reduce using rule 19 (sent -> bloque .)
    LBRACE          reduce using rule 19 (sent -> bloque .)
    IDENTIFIER      reduce using rule 19 (sent -> bloque .)
    RBRACE          reduce using rule 19 (sent -> bloque .)


state 22

    (20) sent -> sent_assign .

    BREAK           reduce using rule 20 (sent -> sent_assign .)
    IF              reduce using rule 20 (sent -> sent_assign .)
    WHILE           reduce using rule 20 (sent -> sent_assign .)
    DO              reduce using rule 20 (sent -> sent_assign .)
    READ            reduce using rule 20 (sent -> sent_assign .)
    WRITE           reduce using rule 20 (sent -> sent_assign .)
    LBRACE          reduce using rule 20 (sent -> sent_assign .)
    IDENTIFIER      reduce using rule 20 (sent -> sent_assign .)
    RBRACE          reduce using rule 20 (sent -> sent_assign .)


state 23

    (21) sent -> BREAK .

    BREAK           reduce using rule 21 (sent -> BREAK .)
    IF              reduce using rule 21 (sent -> BREAK .)
    WHILE           reduce using rule 21 (sent -> BREAK .)
    DO              reduce using rule 21 (sent -> BREAK .)
    READ            reduce using rule 21 (sent -> BREAK .)
    WRITE           reduce using rule 21 (sent -> BREAK .)
    LBRACE          reduce using rule 21 (sent -> BREAK .)
    IDENTIFIER      reduce using rule 21 (sent -> BREAK .)
    RBRACE          reduce using rule 21 (sent -> BREAK .)


state 24

    (22) sent_if -> IF . LPAREN exp_bool RPAREN THEN bloque else_part FI

    LPAREN          shift and go to state 35


state 25

    (25) sent_while -> WHILE . LPAREN exp_bool RPAREN bloque

    LPAREN          shift and go to state 36


state 26

    (26) sent_do -> DO . bloque UNTIL LPAREN exp_bool RPAREN SEMICOLON
    (31) bloque -> . LBRACE list_sent RBRACE

    LBRACE          shift and go to state 11

    bloque                         shift and go to state 37

state 27

    (27) sent_read -> READ . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 38


state 28

    (32) sent_assign -> IDENTIFIER . ASSIGN expr SEMICOLON
    (33) sent_assign -> IDENTIFIER . ASSIGN exp_bool SEMICOLON
    (34) sent_assign -> IDENTIFIER . ASSIGN factor SEMICOLON

    ASSIGN          shift and go to state 39


state 29

    (28) sent_write -> WRITE . exp_bool_or_value SEMICOLON
    (38) exp_bool_or_value -> . exp_bool
    (39) exp_bool_or_value -> . exp_value
    (35) exp_bool -> . exp_bool OR comb
    (36) exp_bool -> . exp_bool OR expr
    (37) exp_bool -> . comb
    (29) exp_value -> . NUMBER
    (30) exp_value -> . IDENTIFIER
    (40) comb -> . comb AND igualdad
    (41) comb -> . comb AND expr
    (42) comb -> . igualdad
    (43) igualdad -> . igualdad EQ rel
    (44) igualdad -> . igualdad NE rel
    (45) igualdad -> . rel
    (46) rel -> . expr op_rel expr
    (53) expr -> . expr PLUS term
    (54) expr -> . expr MINUS term
    (55) expr -> . term
    (56) term -> . term TIMES unario
    (57) term -> . term DIVIDE unario
    (58) term -> . unario
    (59) unario -> . PLUS unario
    (60) unario -> . MINUS unario
    (61) unario -> . factor
    (62) factor -> . NUMBER
    (63) factor -> . IDENTIFIER
    (64) factor -> . TRUE
    (65) factor -> . FALSE
    (66) factor -> . LPAREN expr RPAREN
    (67) factor -> . LPAREN exp_bool RPAREN

    NUMBER          shift and go to state 45
    IDENTIFIER      shift and go to state 46
    PLUS            shift and go to state 49
    MINUS           shift and go to state 51
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    LPAREN          shift and go to state 56

    exp_bool_or_value              shift and go to state 40
    exp_bool                       shift and go to state 41
    exp_value                      shift and go to state 42
    comb                           shift and go to state 43
    expr                           shift and go to state 44
    igualdad                       shift and go to state 47
    rel                            shift and go to state 48
    term                           shift and go to state 50
    unario                         shift and go to state 52
    factor                         shift and go to state 53

state 30

    (5) decl -> tipo list_id . SEMICOLON

    SEMICOLON       shift and go to state 57


state 31

    (9) list_id -> IDENTIFIER . COMMA list_id
    (10) list_id -> IDENTIFIER .

    COMMA           shift and go to state 58
    SEMICOLON       reduce using rule 10 (list_id -> IDENTIFIER .)


state 32

    (31) bloque -> LBRACE list_sent . RBRACE

    RBRACE          shift and go to state 59


state 33

    (1) program -> PROGRAM LBRACE list_decl list_sent RBRACE .

    $end            reduce using rule 1 (program -> PROGRAM LBRACE list_decl list_sent RBRACE .)


state 34

    (11) list_sent -> sent list_sent .

    RBRACE          reduce using rule 11 (list_sent -> sent list_sent .)


state 35

    (22) sent_if -> IF LPAREN . exp_bool RPAREN THEN bloque else_part FI
    (35) exp_bool -> . exp_bool OR comb
    (36) exp_bool -> . exp_bool OR expr
    (37) exp_bool -> . comb
    (40) comb -> . comb AND igualdad
    (41) comb -> . comb AND expr
    (42) comb -> . igualdad
    (43) igualdad -> . igualdad EQ rel
    (44) igualdad -> . igualdad NE rel
    (45) igualdad -> . rel
    (46) rel -> . expr op_rel expr
    (53) expr -> . expr PLUS term
    (54) expr -> . expr MINUS term
    (55) expr -> . term
    (56) term -> . term TIMES unario
    (57) term -> . term DIVIDE unario
    (58) term -> . unario
    (59) unario -> . PLUS unario
    (60) unario -> . MINUS unario
    (61) unario -> . factor
    (62) factor -> . NUMBER
    (63) factor -> . IDENTIFIER
    (64) factor -> . TRUE
    (65) factor -> . FALSE
    (66) factor -> . LPAREN expr RPAREN
    (67) factor -> . LPAREN exp_bool RPAREN

    PLUS            shift and go to state 49
    MINUS           shift and go to state 51
    NUMBER          shift and go to state 61
    IDENTIFIER      shift and go to state 62
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    LPAREN          shift and go to state 56
